2008-01-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-handlers.el (unhandled-file-name-directory): Add handler.
	(url-handler-unhandled-file-name-directory): New fun.

2008-01-07  Michael Albinus  <michael.albinus@gmx.de>

	* url-handlers.el (url-file-handler): Autoload.

2007-12-11  Glenn Morris  <rgm@gnu.org>

	* url.el (url-configuration-directory): Make it a defcustom.

	* url-util.el (url-make-private-file): New function.
	* url-cookie.el (url-cookie-write-file):
	* url-history.el (url-history-save-history):
	Use url-make-private-file and with-temp-buffer.

2007-12-06  Glenn Morris  <rgm@gnu.org>

	* url-file.el, url-mailto.el: Remove directory part from filenames
	in function declarations.

2007-12-02  Glenn Morris  <rgm@gnu.org>

	* url-about.el, url-handlers.el: Don't require cl when compiling.

	* url-dav.el (url-dav-delete-directory): Fix message typo.

	* url-history.el (top-level): Don't require cl when compiling.
	(url-history-setup-save-timer, url-history-save-history):
	Use condition-case rather than ignore-errors.

	* url-imap.el (top-level): Don't require cl when compiling.
	(url-imap): Use signal rather than check-type.

	* url-news.el (top-level): Don't require cl when compiling.
	(gnus-group-buffer): Define for compiler.
	(url-news-fetch-message-id): Don't use `declare'.
	(nntp-open-tls-stream, nntp-open-ssl-stream):
	No need to define for compiler.
	(url-snews): Use nntp-open-tls-stream unless ssl is requested.
	Correct quoting of nntp-open-connection-function value.

2007-12-01  Glenn Morris  <rgm@gnu.org>

	* url-handlers.el (top-level): Always require url-parse, not just
	when compiling.

2007-11-30  Glenn Morris  <rgm@gnu.org>

	* url-cookie.el (url-cookie-p): Declare as a function.

2007-11-29  Glenn Morris  <rgm@gnu.org>

	* url-file.el (url-file-build-filename, url-file): Wrap uses of
	efs in (featurep 'xemacs) test.

	* url-irc.el (zenirc, zenirc-send-line): Declare as functions.

2007-11-28  Diane Murray  <disumu@x3y2z1.net>
